<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpFragment">

    <TextView
        android:id="@+id/textView999"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/sebino"
        android:text="@string/create_a_new_account"
        android:textColor="@color/main_text_color"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/username"
        android:textColor="@color/main_text_color"
        app:layout_constraintBottom_toTopOf="@+id/signup_name"
        app:layout_constraintStart_toStartOf="@+id/signup_name" />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_input_background"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/main_text_color"
        android:textColorHint="@color/secondary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView999" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        android:textColor="@color/main_text_color"
        app:layout_constraintBottom_toTopOf="@+id/signup_email"
        app:layout_constraintStart_toStartOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_input_background"
        android:ems="10"
        android:hint="example@gmail.com"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/main_text_color"
        android:textColorHint="@color/secondary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_name" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password"
        android:textColor="@color/main_text_color"
        app:layout_constraintBottom_toTopOf="@+id/signup_password"
        app:layout_constraintStart_toStartOf="@+id/signup_password" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/form_input_background"
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/main_text_color"
        android:textColorHint="@color/secondary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <carbon.widget.Button
        android:id="@+id/signupPage_signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/form_input_background"
        android:fontFamily="@font/sebino"
        android:text="@string/register"
        android:textColor="@color/main_text_color"
        app:carbon_cornerRadius="8dp"
        app:carbon_rippleColor="@color/soft_ripple_color"
        app:layout_constraintBottom_toTopOf="@+id/signupPage_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <carbon.widget.Button
        android:id="@+id/signupPage_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/form_input_background"
        android:fontFamily="@font/sebino"
        android:text="@string/already_have_an_account"
        android:textColor="@color/main_text_color"
        app:carbon_cornerRadius="8dp"
        app:carbon_rippleColor="@color/soft_ripple_color"
        app:layout_constraintBottom_toTopOf="@+id/signup_guest_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_guest_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:text="@string/or_play_as_a_guest"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>