<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/pve_back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/back_button"
        android:scaleType="centerInside"
        android:src="@drawable/back1"
        app:tint="@color/back_button_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/P_card_pve"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:outlineSpotShadowColor="@color/card_shadow"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="16dp"
        app:cardElevation="32dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pve_back_btn">

        <ImageView
            android:id="@+id/P_img_pve"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/player_image"
            android:padding="16dp"
            android:src="@drawable/profile_blue" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/AI_card_pve"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:outlineSpotShadowColor="@color/card_shadow"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="16dp"
        app:cardElevation="32dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/P_card_pve">

        <ImageView
            android:id="@+id/AI_img_pve"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/enemy_image"
            android:padding="16dp"
            android:src="@drawable/robot" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/P_name_pve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/text_underline_color"
        android:defaultFocusHighlightEnabled="true"
        android:ems="10"
        android:fontFamily="@font/sebino"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/player_1"
        android:textAlignment="center"
        android:textColor="@color/main_text_color"
        app:layout_constraintEnd_toEndOf="@+id/P_card_pve"
        app:layout_constraintStart_toStartOf="@+id/P_card_pve"
        app:layout_constraintTop_toBottomOf="@+id/P_card_pve" />

    <TextView
        android:id="@+id/AI_name_pve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/sebino"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ai"
        android:textAlignment="center"
        android:textColor="@color/main_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/P_name_pve"
        app:layout_constraintEnd_toEndOf="@+id/AI_card_pve"
        app:layout_constraintStart_toStartOf="@+id/AI_card_pve"
        app:layout_constraintTop_toTopOf="@+id/P_name_pve" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sebino"
        android:text="@string/click_on_player_1_name_to_edit"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_name_pve" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/sebino"
        android:text="@string/rules"
        android:textColor="@color/main_text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/P_card_pve"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sebino"
        android:lineSpacingExtra="2sp"
        android:text="@string/rule_1"
        android:textColor="@color/main_text_color"
        app:layout_constraintEnd_toEndOf="@+id/AI_card_pve"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sebino"
        android:lineSpacingExtra="2sp"
        android:text="@string/rule_2"
        android:textColor="@color/main_text_color"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sebino"
        android:lineSpacingExtra="2sp"
        android:text="@string/rule_3"
        android:textColor="@color/main_text_color"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sebino"
        android:lineSpacingExtra="2sp"
        android:text="@string/rule_4"
        android:textColor="@color/main_text_color"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView134"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/sebino"
        android:text="@string/levels"
        android:textColor="@color/main_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/easy_level"
        app:layout_constraintStart_toStartOf="@+id/P_card_pve" />

    <carbon.widget.Button
        android:id="@+id/easy_level"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/easy_button_background"
        android:textSize="20sp"
        android:textStyle="normal"
        app:carbon_cornerRadius="16dp"
        app:carbon_rippleColor="@color/ripple_color"
        app:carbon_rippleStyle="background"
        app:carbon_stroke="@color/stroke_on_color"
        app:carbon_strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@+id/start_pve_btn"
        app:layout_constraintStart_toStartOf="@+id/start_pve_btn" />

    <carbon.widget.Button
        android:id="@+id/medium_level"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/medium_button_background"
        android:textSize="20sp"
        android:textStyle="normal"
        app:carbon_cornerRadius="16dp"
        app:carbon_rippleColor="@color/ripple_color"
        app:carbon_rippleStyle="background"
        app:carbon_stroke="@color/stroke_off_color"
        app:carbon_strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/easy_level"
        app:layout_constraintEnd_toStartOf="@+id/hard_level"
        app:layout_constraintStart_toEndOf="@+id/easy_level" />

    <carbon.widget.Button
        android:id="@+id/hard_level"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/hard_button_background"
        android:textSize="20sp"
        android:textStyle="normal"
        app:carbon_cornerRadius="16dp"
        app:carbon_rippleColor="@color/ripple_color"
        app:carbon_rippleStyle="background"
        app:carbon_stroke="@color/stroke_off_color"
        app:carbon_strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/easy_level"
        app:layout_constraintEnd_toEndOf="@+id/start_pve_btn"
        app:layout_constraintTop_toTopOf="@+id/easy_level" />

    <carbon.widget.Button
        android:id="@+id/start_pve_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_background"
        android:elevation="16dp"
        android:outlineSpotShadowColor="@color/card_shadow"
        android:text="@string/start"
        android:textColor="@color/main_text_color"
        android:textSize="20sp"
        android:textStyle="normal"
        app:carbon_cornerRadius="16dp"
        app:carbon_rippleColor="@color/ripple_color"
        app:carbon_rippleStyle="background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>